--- a/www/styles.scss
+++ b/www/styles.scss
@@ -13,7 +13,7 @@ $primary: #333333;
 }
 
 /* rainbow borders */
-nav {
+header nav {
   margin-bottom: 18px;
   box-shadow: 0 3px 0 0px var(--red),
               0 6px 0 0px var(--orange),
