--- a/www/styles.scss
+++ b/www/styles.scss
@@ -72,3 +72,15 @@ p.card-img-top > img {
   display: none;
 }
 
+#age-verification {
+  text-align: center;
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;  
+  height: 100vh; 
+  background-color: black;
+  color: white;
+}
+
